--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,5 @@ test:
 #
 production:
   <<: *default
-  database: search_engine_BE_production
-  username: search_engine_BE
-  password: <%= ENV["SEARCH_ENGINE_BE_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
+  sslmode: require
